--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="assets/styles/index.css" />
     <link rel="stylesheet" href="assets/styles/search-box.css" />
     <link rel="stylesheet" href="assets/styles/left-side-bar.css" />
+    <link rel="stylesheet" href="assets/styles/search_filters.css" />
   </head>
   <body>
     <div id="root"></div>
